# thorvg.android

./: .gitignore  .gitignore_thorvg  BUILD_SVG_MODULE.md  NATIVE_MODULE_GUIDE.md  QUICK_START.md  README.md  THORVG_DEPENDENCY.md  build_libthorvg.sh  settings.gradle
lottie/: build.gradle
lottie/src/main/cpp/: CMakeLists.txt
lottie/src/main/java/org/thorvg/lottie/: LottieDrawable.kt
native/: build.gradle
native/src/main/cpp/: CMakeLists.txt
native/src/main/cpp/lottie/: LottieData.h  lottie-libs.cpp
native/src/main/cpp/svg/: SvgData.h  svg-libs.cpp
sample/: build.gradle
sample/src/main/: AndroidManifest.xml
sample/src/main/java/org/thorvg/sample/: MainActivity.kt  SvgActivity.kt
sample/src/main/res/layout/: activity_main.xml
svg/: README.md  README_zh.md  build.gradle  proguard-rules.pro
svg/src/main/cpp/: CMakeLists.txt  SvgData.cpp  svg-libs.cpp
svg/src/main/java/org/thorvg/svg/: SvgDrawable.kt  SvgImageView.kt
svg/src/main/res/values/: attrs.xml
